--- a/www/home.html
+++ b/www/home.html
@@ -21,11 +21,12 @@
         
         <p class="homeDetails basicText">Via deze App kan er op restaurants gezocht worden, dit door middel van categorie, waarderingen van klanten maar ook op afstand van jouw huidige locatie. Ook kan er contactgegevens gevonden worden van restaurants en kunnen er reviews bekeken worden.</p>
 
-        <p class="basicText homeFooter">Deze App is gemaakt door Louis Hol en Jarno van Wijgerden in opdracht van Avans Hogeschool (Den Bosch)</p>
+        <p class="basicText homeFooter">Deze App is gemaakt door Louis Hol en Jarno van Wijgerden.</p>
 
-
+        <button id="btnklik">Klik hier voor volgende pagina (Nog niet echte knop)</button>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script type="text/javascript" src="js/api.js"></script>
+        <script type="text/javascript" src="js/click.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
@@ -33,6 +34,10 @@
             $(document).ready(function()
             {
                 //var restaurant = getAllRestaurants();
+                $("#btnklik").on("click", function()
+                {
+                    window.location = "restaurants.html";
+                });
             });
         </script>
     </body>
