--- a/www/restaurants.html
+++ b/www/restaurants.html
@@ -22,7 +22,7 @@
 
         <label class="basicText" for="categorie">Restaurant categorie</label>
         <select id="category" class="combobox" name="categorie">
-            <option value="none">Kies een categorie</option>
+            <option value="none">Alle categorien</option>
 
             <option value="african">African</option>
             <option value="american">American</option>
@@ -80,9 +80,9 @@
 
         </select>
 
-        <label class="basicText" for="categorie">Afstand in KM</label>
+        <label class="basicText" for="categorie">Afstand van jouw locatie</label>
         <select id="distance" class="combobox" name="categorie">
-            <option value="none">Kies een afstand</option>
+            <option value="none">Alle afstanden</option>
             <option value="5"> 5 KM </option>
             <option value="10"> 10 KM </option>
             <option value="20"> 20 KM </option>
