--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,10 @@
         <p class="basicText homeFooter">Deze App is gemaakt door Louis Hol en Jarno van Wijgerden.</p>
 
         <button id="btnklik">Klik hier voor volgende pagina (Nog niet echte knop)</button>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
         <script type="text/javascript" src="js/api.js"></script>
         <script type="text/javascript" src="js/click.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
