Details verder afgemaakt

--- a/www/results.html
+++ b/www/results.html
@@ -34,8 +34,8 @@
         <ul id="restaurants" data-role="listview"  data-filter="true" data-input="#filterable-input">
         </ul>    
         <p class="basicText homeFooter">Deze App is gemaakt door Louis Hol en Jarno van Wijgerden.</p>
+        <script type="text/javascript" src="js/device.js"></script>
         <script type="text/javascript" src="js/api.js"></script>
-        <script type="text/javascript" src="js/click.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
