--- a/www/details.html
+++ b/www/details.html
@@ -1,12 +1,5 @@
 
-        <script type="text/javascript">
-        $(document).ready(function()
-        {
-           var data = localStorage.getItem("restaurant");
-           alert(data);
-        });
-
-        </script>        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
@@ -41,17 +34,17 @@
             <p id="post" class="basicText"> Postcode : </p>
             <p id="country" class="basicText"> Land : </p>
             <p id="tel" class="basicText"> Telefoon : </p>
+            <a href="tel:0620852002">Call</a>
             <p id="url" class="basicText"> Website : </p>
             
           </div>
 
         </div>
+        <script type="text/javascript" src="js/device.js"></script>
         <script type="text/javascript" src="js/api.js"></script>
          <script type="text/javascript">
             $(document).ready(function()
             {
-
-
                //home
                var data =  JSON.parse(localStorage.getItem("restaurant"));
                $("#info").html("Restaurant " + data.name);
@@ -59,7 +52,7 @@
                var description = data.description;
                if(description == null)
                {
-                    description = "Dit restaurant heeft geen beschrijving beschikbaar";
+                    description = "Dit restaurant heeft geen beschrijving";
                }
                $("#details").html(description);
 
@@ -72,11 +65,17 @@
                     for(var object in reviews.results)
                     {
                         var review = reviews.results[object];
-                        var text = '<li><h2>' + review.author.name + '</h2><p>' + review.body + '</p><p class="ui-li-aside"><strong>' + review.rating + '/100</strong> Waardering</p></li>';
+                        var text = '<li ><h2>' + review.author.name + '</h2><p>' + review.body + '</p><div class="ui-li-aside"><strong>' + review.rating + '/100</strong> Waardering</div></li>';
                         $("#reviews").append(text);
                     }
                     $("#reviews").listview("refresh");
                });
+
+               $('#reviews li').click(function(e) 
+              { 
+                var innertext = $(this).find( "p" ).text();
+                alert(innertext);
+              });
 
                //contact
                $("#street").append(data.address.street);
@@ -85,15 +84,15 @@
                $("#post").append(data.address.zipcode);
                $("#country").append(data.address.country);
                $("#tel").append(data.telephone);
-               $("#url").append(data.website_url);
+               $("#url").append("<a id='website'>"+data.website_url+"</a>");
 
-
-
-
-
-
-
+               $("#website").on("click",function()
+               {
+                  var url = $(this).text();
+                  appBrowser(url);
+               });
             });
+
         </script>
         
         <p class="basicText homeFooter">Deze App is gemaakt door Louis Hol en Jarno van Wijgerden.</p>
