--- a/www/index.html
+++ b/www/index.html
@@ -28,8 +28,8 @@
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
+        <script type="text/javascript" src="js/device.js"></script>
         <script type="text/javascript" src="js/api.js"></script>
-        <script type="text/javascript" src="js/click.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
