--- a/www/restaurants.html
+++ b/www/restaurants.html
@@ -100,8 +100,8 @@
         <p class="basicText homeFooter">Deze App is gemaakt door Louis Hol en Jarno van Wijgerden.</p>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script type="text/javascript" src="js/device.js"></script>
         <script type="text/javascript" src="js/api.js"></script>
-        <script type="text/javascript" src="js/click.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
