--- a/www/results.html
+++ b/www/results.html
@@ -26,6 +26,17 @@
         <div style="background: #f1f1f1;">
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">
         </div>
+        <header class="header">
+            <nav class="nav-container">
+                <div class="nav-toggle">Menu</div>
+                <ul class="nav">
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="restaurants.html">Restaurant zoeken</a></li>
+                    <li><a href="contact.html">Contact gegevens</a></li>
+                    <li><a href="settings.html">Settings</a></li>
+                </ul>
+            </nav>
+        </header>
         <p class="homeInfo">Zoekresultaten : </p>
 
 
