--- a/www/index.html
+++ b/www/index.html
@@ -16,14 +16,23 @@
         <div style="background: #f1f1f1;">
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">
         </div>
+        <header class="header">
+            <nav class="nav-container">
+                <div class="nav-toggle">Menu</div>
+                <ul class="nav">
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="restaurants.html">Restaurant zoeken</a></li>
+                    <li><a href="contact.html">Contact gegevens</a></li>
+                    <li><a href="settings.html">Settings</a></li>
+                </ul>
+            </nav>
+        </header>
 
         <p class="homeInfo">Zoek eenvoudig restaurants bij jouw in de buurt!</p>
         
         <p class="homeDetails basicText">Via deze App kan er op restaurants gezocht worden, dit door middel van categorie, waarderingen van klanten maar ook op afstand van jouw huidige locatie. Ook kan er contactgegevens gevonden worden van restaurants en kunnen er reviews bekeken worden.</p>
 
         <p class="basicText homeFooter">Deze App is gemaakt door Louis Hol en Jarno van Wijgerden.</p>
-
-        <button id="btnklik">Klik hier voor volgende pagina (Nog niet echte knop)</button>
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
