--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
             <nav class="nav-container">
                 <div class="nav-toggle">Menu</div>
                 <ul class="nav">
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="restaurants.html">Restaurant zoeken</a></li>
                     <li><a href="contact.html">Contact gegevens</a></li>
                     <li><a href="settings.html">Settings</a></li>
