--- a/www/restaurants.html
+++ b/www/restaurants.html
@@ -25,7 +25,7 @@
             <nav class="nav-container">
                 <div class="nav-toggle">Menu</div>
                 <ul class="nav">
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="restaurants.html">Restaurant zoeken</a></li>
                     <li><a href="contact.html">Contact gegevens</a></li>
                     <li><a href="settings.html">Settings</a></li>
@@ -38,7 +38,6 @@
         <label class="basicText" for="categorie">Restaurant categorie</label>
         <select id="category" class="combobox" name="categorie">
             <option value="none">Alle categorien</option>
-
             <option value="african">African</option>
             <option value="american">American</option>
             <option value="asian">Asian</option>
