--- a/www/restaurants.html
+++ b/www/restaurants.html
@@ -1,30 +1,33 @@
+<!-- <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="format-detection" content="telephone=no" />
+        <meta name="msapplication-tap-highlight" content="no" />
+        WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=medium-dpi" />
+        <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
+        <!-- 
+        <title>Eet.nu App</title>
+    </head>
+    <body> -->
 
 
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
 
         <div style="background: #f1f1f1;">
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">
         </div>
-       <header class="header">
-            <nav class="nav-container">
-                <div class="nav-toggle">Menu</div>
-                <ul class="nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="restaurants.html">Restaurant zoeken</a></li>
-                    <li><a href="contact.html">Contact gegevens</a></li>
-                    <li><a href="settings.html">Settings</a></li>
-                </ul>
-            </nav>
-        </header>
         <p class="homeInfo">Restaurants</p>
         <p class="basicText">Vanaf hier kan gezocht worden op een restaurant, dit kan op categorie en via de afstand van jouw locatie</p>
 
         <label class="basicText" for="categorie">Restaurant categorie</label>
         <select id="category" class="combobox" name="categorie">
             <option value="none">Alle categorien</option>
+
             <option value="african">African</option>
             <option value="american">American</option>
             <option value="asian">Asian</option>
@@ -120,3 +123,6 @@
                 });
             });
         </script>
+<!--     </body>
+</html>
+ -->
