--- a/www/restaurants.html
+++ b/www/restaurants.html
@@ -1,33 +1,42 @@
-<!-- <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="msapplication-tap-highlight" content="no" />
-        WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=medium-dpi" />
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
-        <title>Eet.nu App</title>
-    </head>
-    <body>
-         -->
+
+     <div data-role="page" id="restaurants">
 
 
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        <script type="text/javascript" src="js/device.js"></script>
+        <script type="text/javascript" src="js/api.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+
+
 
         <div style="background: #f1f1f1;">
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">
         </div>
+
+        <header class="header">
+            <nav class="nav-container">
+                <div class="nav-toggle">Menu</div>
+                <ul class="nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="restaurants.html">Restaurant zoeken</a></li>
+                    <li><a href="contact.html">Contact gegevens</a></li>
+                    <li><a href="settings.html">Settings</a></li>
+                </ul>
+            </nav>
+        </header>
+
         <p class="homeInfo">Restaurants</p>
         <p class="basicText">Vanaf hier kan gezocht worden op een restaurant, dit kan op categorie en via de afstand van jouw locatie</p>
 
         <label class="basicText" for="categorie">Restaurant categorie</label>
         <select id="category" class="combobox" name="categorie">
             <option value="none">Alle categorien</option>
-
             <option value="african">African</option>
             <option value="american">American</option>
             <option value="asian">Asian</option>
@@ -81,7 +90,6 @@
             <option value="vietnamese">Vietnamese</option>
             <option value="western-european">Western-european</option>
             <option value="wok">Wok</option>    
-
         </select>
 
         <label class="basicText" for="categorie">Afstand van jouw locatie</label>
@@ -98,20 +106,13 @@
         
         <button id="btngo" class="basicText" style="margin-left:10%; width:80%">Toon resultaten</button>
         <p class="basicText homeFooter">Deze App is gemaakt door Louis Hol en Jarno van Wijgerden.</p>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script type="text/javascript" src="js/device.js"></script>
-        <script type="text/javascript" src="js/api.js"></script>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
-            app.initialize();
-            $(document).ready(function()
-            {
+            //$(document).ready(function()
+            //{
                $("#btngo").on("click", function()
                 {
                     getQueryURL(function(url)
-                    {
+                    {                        
                         getRestaurantsByQuery(url, function(data)
                         {
                             localStorage.setItem("data", data);
@@ -121,5 +122,6 @@
                   
                     });
                 });
-            });
+            //});
         </script>
+    </div>
