--- a/www/index.html
+++ b/www/index.html
@@ -8,11 +8,11 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=medium-dpi" />
       
 
-        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/index.css" />
 
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
@@ -29,14 +29,15 @@
         <div style="background: #f1f1f1;">
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">
         </div>
+       
         <header class="header">
             <nav class="nav-container">
                 <div class="nav-toggle">Menu</div>
                 <ul class="nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="restaurants.html">Restaurant zoeken</a></li>
-                    <li><a href="contact.html">Contact gegevens</a></li>
-                    <li><a href="settings.html">Settings</a></li>
+                    <li class="li" data-url="index.html">Home</li>
+                    <li class="li" data-url="restaurants.html">Restaurant</li>
+                    <li class="li" data-url="contact.html">Contact</li>
+                    <li class="li" data-url="settings.html">Settings</li>
                 </ul>
             </nav>
         </header>
