--- a/www/results.html
+++ b/www/results.html
@@ -1,17 +1,15 @@
 
 
     <div data-role="page" id="results">
-        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
         <script type="text/javascript" src="js/device.js"></script>
         <script type="text/javascript" src="js/api.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-
-
         <div style="background: #f1f1f1;">
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">
         </div>
@@ -19,10 +17,10 @@
             <nav class="nav-container">
                 <div class="nav-toggle">Menu</div>
                 <ul class="nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="restaurants.html">Restaurant zoeken</a></li>
-                    <li><a href="contact.html">Contact gegevens</a></li>
-                    <li><a href="settings.html">Settings</a></li>
+                    <li class="li" data-url="index.html">Home</li>
+                    <li class="li" data-url="restaurants.html">Restaurant</li>
+                    <li class="li" data-url="contact.html">Contact</li>
+                    <li class="li" data-url="settings.html">Settings</li>
                 </ul>
             </nav>
         </header>
@@ -39,7 +37,7 @@
             }
             $('#restaurants li').on("click", function(e) 
             { 
-                alert("Klik");
+
                 var dataid = $(this).attr('data-id');
                 getRestaurantByID(dataid, function(data)
                 {
