--- a/www/settings.html
+++ b/www/settings.html
@@ -1,7 +1,6 @@
 
 
-     <div data-role="page" id="restaurants">
-
+        <div data-role="page" id="restaurants">
 
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/index.css" />
@@ -31,7 +30,7 @@
             </nav>
         </header>
 
-        <p class="homeInfo">Settings</p>
+        <p class="homeInfo">settings</p>
         <p class="basicText">Vanaf hier kun je standaart instellingen maken voor restaurants</p>
 
         <label class="basicText" for="categorie">Restaurant categorie</label>
@@ -96,7 +95,7 @@
         <select id="distance" class="combobox" name="categorie">
             <option value="none">Alle afstanden</option>
             <option value="5"> 5 KM </option>
-            <option value="10"> 10 KM </option>
+            <option value="10"> 10 KM </option>   
             <option value="20"> 20 KM </option>
             <option value="50"> 50 KM </option>
         </select>
@@ -110,13 +109,33 @@
     </div>
 
     <script type="text/javascript">
+
+    getSettings(function(c, a, w)
+    {
+        if(c != "")
+        {
+            $("#category").val(c);
+            $("#distance").val(a);
+            $('#category').selectmenu('refresh');
+            $('#distance').selectmenu('refresh');
+            if(w == "true")
+            {
+                $("#waardering").prop('checked', true);
+            }
+            else
+            {
+                $("#waardering").prop('checked', false);
+            }
+        }
+    });
+
+
     $('#btnsave').on("click", function() 
     { 
         btnSaveClicked();
-        getSettings(function(categorie, afstand, waardering)
-        {
-            alert(categorie);   
-        });
     });
 
     </script>
+
+
+
