--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
         <title>Eet.nu App</title>
     </head>
     <body>
-       
+    <div data-role="page" id="page1">
         <div style="background: #f1f1f1;">
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">
         </div>
@@ -47,5 +47,7 @@
         <p class="homeDetails basicText">Via deze App kan er op restaurants gezocht worden, dit door middel van categorie, waarderingen van klanten maar ook op afstand van jouw huidige locatie. Ook kan er contactgegevens gevonden worden van restaurants en kunnen er reviews bekeken worden.</p>
 
         <p class="basicText homeFooter">Deze App is gemaakt door Louis Hol en Jarno van Wijgerden.</p>
+    
+    </div>
     </body>
 </html>
