--- a/www/restaurants.html
+++ b/www/restaurants.html
@@ -22,10 +22,10 @@
             <nav class="nav-container">
                 <div class="nav-toggle">Menu</div>
                 <ul class="nav">
-                    <li class="li" data-url="index.html">Home</li>
-                    <li class="li" data-url="restaurants.html">Restaurant</li>
-                    <li class="li" data-url="contact.html">Contact</li>
-                    <li class="li" data-url="settings.html">Settings</li>
+                    <li> <a href ="index.html" data-transition="slide"> Home </a></li>
+                    <li> <a href ="restaurants.html" data-transition="slide"> Restaurants </a></li>
+                    <li> <a href ="contact.html" data-transition="slide"> Contact </a></li>
+                    <li> <a href ="settings.html" data-transition="slide"> Settings </a></li>  
                 </ul>
             </nav>
         </header>
